--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="education.html">Education</a></li>
 		<li><a href="publications.html">Publications</a></li>
-		<li><a href="index.html">Home</a></li>
+		<li><a href="contact.html">Contact</a></li>
 	</div>
 
 	<div>
