--- a/contact.html
+++ b/contact.html
@@ -2,27 +2,35 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="wangjiahao.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Jiahao Wong</title>
 	</head>
 
 	<body>
+		<div class="master">
+			<div>
+				<h1><a class="index" href="index.html">Jiahao Wong</a><h1/>
+			</div>
 
-		<h1><a href="index.html">Jiahao Wong</a><h1/>
-		<div>
-			<h2>Wellcome</h2>
-	<div>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="education.html">Education</a></li>
-		<li><a href="publications.html">Publications</a></li>
-		<li><a href="contact.html">Contact</a></li>
-	</div>
 
-	<div>
-		<li><b>Emial:</b> wangjiahao2019-z@sibcb.ac.cn</li>
-		<li><b>WeChat:</b> jaychouwong</li>
-		<li><b>Address:</b> 320 Yueyang Road, Shanghai</li>
-	</div>
+			<ul class="menu clearfix">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="education.html">Education</a></li>
+				<li><a href="publications.html">Publications</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
 
+			<div class="content">
+				<ul>
+					<li><b>Emial:</b> wangjiahao2019-z@sibcb.ac.cn</li>
+					<li><b>WeChat:</b> jaychouwong</li>
+					<li><b>Address:</b> 320 Yueyang Road, Shanghai</li>
+				</ul>
+			</div>
+
+			<div class="sibcb">
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
+			</div>
+		</div>
 	</body>
 </html>
