--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
 
 			<ul class="menu clearfix">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="education.html">Education</a></li>
+				<li><a class="current" href="education.html">Education</a></li>
 				<li><a href="publications.html">Publications</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -36,7 +36,7 @@
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
 			</div>
 		</div>
 	</body>
