--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="education.html">Education</a></li>
 				<li><a href="publications.html">Publications</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a class="current" href="contact.html">Contact</a></li>
 			</ul>
 
 			<div class="content">
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
 			</div>
 		</div>
 	</body>
