--- a/publications.html
+++ b/publications.html
@@ -8,8 +8,8 @@
 
 	<body>
 		<div class="master">
-			<div>
-				<h1><a class="index" href="index.html">Jiahao Wong</a><h1/>
+			<div class="index">
+				<h1><a href="index.html">Jiahao Wong</a><h1/>
 			</div>
 
 
