--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 			</ul>
 
 			<div class="content">
-				<ul>
+				<ul class="contact">
 					<li><b>Emial:</b> wangjiahao2019-z@sibcb.ac.cn</li>
 					<li><b>WeChat:</b> jaychouwong</li>
 					<li><b>Address:</b> 320 Yueyang Road, Shanghai</li>
