--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
 			</div>
 		</div>
 	</body>
