--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
 				<p style="font-size: 1.4em;line-height: 2em"># indicates equal contribution</p>
 				<ul class="publications">
 					<li><p>
-							Xinyun Xu#, <span class="author">Jiahao Wang#</span>, Ting Yu, Haohan Nian, Hui Zhang, Guangli Wang, Feng Li: Characterization of a novel aryloxyphenoxypropionate herbicide-hydrolyzing carboxylesterase with R-enantiomer preference from Brevundimonas sp. QPT-2. <b>Process Biochemistry</b> 2019
+							Xinyun Xu, <span class="author">Jiahao Wang#</span>, Ting Yu, Haohan Nian, Hui Zhang, Guangli Wang, Feng Li: Characterization of a novel aryloxyphenoxypropionate herbicide-hydrolyzing carboxylesterase with R-enantiomer preference from Brevundimonas sp. QPT-2. <b>Process Biochemistry</b> 2019
 							[<a href="https://doi.org/10.1016/j.procbio.2019.03.013" target="_blank">ScienceDirect</a>]
 							[<a href="Publications/ProcessBiochemistry_2019.pdf" target="_blank">PDF</a>]
 					</p></li>
@@ -32,7 +32,7 @@
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
 			</div>
 		</div>
 	</body>
