--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
 
 	<body>
 		<div class="master">
-			<div class="index">
-				<h1><a href="index.html">Jiahao Wong</a><h1/>
+			<div>
+				<h1><a class="index" href="index.html">Jiahao Wong</a><h1/>
 			</div>
 
 
@@ -21,15 +21,15 @@
 			</ul>
 
 			<div class="content">
-				<ul class="contact">
-					<li><b>Emial:</b> wangjiahao2019-z@sibcb.ac.cn</li>
+				<ul>
+					<li><b>Email:</b> <a title = "Mail to me" href="Mailto:wangjiahao2019-z@sibcb.ac.cn" class="mail">wangjiahao2019-z@sibcb.ac.cn</a></li>
 					<li><b>WeChat:</b> jaychouwong</li>
 					<li><b>Address:</b> 320 Yueyang Road, Shanghai</li>
 				</ul>
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
 			</div>
 		</div>
 	</body>
