--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 	<body>
 		<div class="master">
-			<div class="index">
-				<h1><a href="index.html">Jiahao Wong</a><h1/>	
+			<div>
+				<h1><a class="index" href="index.html">Jiahao Wong</a><h1/>
 			</div>
+
 
 			<ul class="menu clearfix">
 				<li><a class="current" href="index.html">Home</a></li>
@@ -22,12 +23,12 @@
 			<div class="content">
 				<p class="Wellcome">Wellcome</p>
 				<p class="home">
-					My name is Jiahao Wong. I am a master graduate student at Shanghai Institute of Biochemistry and Cell Biology(<a href="http://www.sibcb.ac.cn/" target="_blank">SIBCB</a>), Chinese Academy of Sciences (<a href="http://www.cas.cn/" target="_blank">CAS</a>). My tutor is <a href="https://jiantaoshi.github.io/" target="_blank">Jiantao Shi</a>, a Principal Investigator (PI) in SIBCB. Our team will be working on cancer genomics and epigenomics. We are interested in systematically charactering dynamics of DNA methylation landscapes during cancer initiation, progress, drug response and resistance. We are also dedicated to developing novel computational methods for non-invasive early cancer detection.
+					My name is Jiahao Wong. I am a professional graduate student at Shanghai Institute of Biochemistry and Cell Biology(<a href="http://www.sibcb.ac.cn/ep1-1.asp" target="_blank">SIBCB</a>), Chinese Academy of Sciences (<a href="http://english.cas.cn/" target="_blank">CAS</a>). My tutor is <a href="https://jiantaoshi.github.io/" target="_blank">Jiantao Shi</a>, a Principal Investigator (PI) in SIBCB. Our team will be working on cancer genomics and epigenomics. We are interested in systematically charactering dynamics of DNA methylation landscapes during cancer initiation, progress, drug response and resistance. We are also dedicated to developing novel computational methods for non-invasive early cancer detection.
 				</p>
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
 			</div>
 		</div>
 	</body>
