--- a/publications.html
+++ b/publications.html
@@ -8,8 +8,8 @@
 
 	<body>
 		<div class="master">
-			<div class="index">
-				<h1><a href="index.html">Jiahao Wong</a><h1/>
+			<div>
+				<h1><a class="index" href="index.html">Jiahao Wong</a><h1/>
 			</div>
 
 
@@ -21,10 +21,10 @@
 			</ul>
 
 			<div class="content">
-				<p style="font-size: 1.4em;line-height: 2em"># indicates equal contribution</p>
+				<p style="font-size: 0.8em; color: white;line-height: 2em"># indicates equal contribution</p>
 				<ul class="publications">
 					<li><p>
-							Xinyun Xu#, <span class="author">Jiahao Wang#</span>, Ting Yu, Haohan Nian, Hui Zhang, Guangli Wang, Feng Li: Characterization of a novel aryloxyphenoxypropionate herbicide-hydrolyzing carboxylesterase with R-enantiomer preference from Brevundimonas sp. QPT-2. <b>Process Biochemistry</b> 2019
+							Xinyun Xu<sup>#</sup>, <span class="author">Jiahao Wang<sup>#</sup></span>, Ting Yu, Haohan Nian, Hui Zhang, Guangli Wang, Feng Li: Characterization of a novel aryloxyphenoxypropionate herbicide-hydrolyzing carboxylesterase with R-enantiomer preference from Brevundimonas sp. QPT-2. <b>Process Biochemistry</b> 2019
 							[<a href="https://doi.org/10.1016/j.procbio.2019.03.013" target="_blank">ScienceDirect</a>]
 							[<a href="Publications/ProcessBiochemistry_2019.pdf" target="_blank">PDF</a>]
 					</p></li>
@@ -32,7 +32,7 @@
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
 			</div>
 		</div>
 	</body>
