--- a/education.html
+++ b/education.html
@@ -7,9 +7,9 @@
 	</head>
 
 	<body>
-		<div class="master" >
-			<div class="index">
-				<h1><a href="index.html">Jiahao Wong</a><h1/>
+		<div class="master">
+			<div>
+				<h1><a class="index" href="index.html">Jiahao Wong</a><h1/>
 			</div>
 
 
@@ -36,7 +36,7 @@
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png"></a>
+				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
 			</div>
 		</div>
 	</body>
