--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/"><img src="images/sibcb.png" height="120px" width="1150px"></a>
+				<a href="http://www.sibcb.ac.cn/" target="_blank"><img src="images/sibcb.png" height="120px" width="1150px"></a>
 			</div>
 		</div>
 	</body>
