--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,9 @@
 			</ul>
 
 			<div class="content">
-				<ul>
+				<ul class="contact">
 					<li><b>Email:</b> <a title = "Mail to me" href="Mailto:wangjiahao2019-z@sibcb.ac.cn" class="mail">wangjiahao2019-z@sibcb.ac.cn</a></li>
+					<li><b>Github:</b> <a title = "Go to Github" href="https://github.com/JiahaoWongg" target ="_blank" class="github">JiahaoWongg</a><li>
 					<li><b>WeChat:</b> jaychouwong</li>
 					<li><b>Address:</b> 320 Yueyang Road, Shanghai</li>
 				</ul>
