--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="master">
 			<div>
-				<h1><a class="index" href="index.html">Jiahao Wong</a><h1/>
+				<h1 font-style= "Magneto"><a class="index" href="index.html">Jiahao Wong</a><h1/>
 			</div>
 
 
@@ -24,6 +24,7 @@
 				<p class="Wellcome">Wellcome</p>
 				<p class="home">
 					My name is Jiahao Wong. I am a graduate student at Shanghai Institute of Biochemistry and Cell Biology (<a href="http://www.sibcb.ac.cn/ep1-1.asp" target="_blank">SIBCB</a>), Chinese Academy of Sciences (<a href="http://english.cas.cn/" target="_blank">CAS</a>). My tutor is <a href="https://jiantaoshi.github.io/" target="_blank">Jiantao Shi</a>, a Principal Investigator (PI) in SIBCB. Our team will be working on cancer genomics and epigenomics. We are interested in systematically charactering dynamics of DNA methylation landscapes during cancer initiation, progress, drug response and resistance. The tools I'm good at are R, Linux and Python. At present, I am committed to the screening and transformation application of DNA methylation markers in early stage of lung cancer.
+
 				</p>
 			</div>
 
