--- a/education.html
+++ b/education.html
@@ -36,7 +36,7 @@
 			</div>
 
 			<div class="sibcb">
-				<a href="http://www.sibcb.ac.cn/" target="_blank"><img src="images/sibcb.png" height="120px" width="1150px"></a>
+				<a href="http://www.sibcb.ac.cn/" target="_blank"><img src="images/sibcb.png" target="_blank" height="140px" width="1260px"></a>
 			</div>
 		</div>
 	</body>
