--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
 			<div class="content">
 				<ul>
 					<li><b>Sep-2019 ~ Now:</b>
-						Shanghai Institute of Biochemistry and Cell Biology (<a href="http://www.sibcb.ac.cn/ep1-1.asp" target="_blank">SIBCB</a>)</li>
+						Shanghai Institute of Biochemistry and Cell Biology (<a href="http://www.sibcb.ac.cn/" target="_blank">SIBCB</a>)</li>
 
 					<li><b>Sep-2015 ~ Jul-2019:</b>
 						Huaibei Normal University (<a href="http://www.chnu.edu.cn/" target="_blank">HBNU</a>)</li>
