--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,11 @@
 							[<a href="https://doi.org/10.1016/j.procbio.2019.03.013" target="_blank">ScienceDirect</a>]
 							[<a href="Publications/ProcessBiochemistry_2019.pdf" target="_blank">PDF</a>]
 					</p></li>
+					<li><p>
+							Sha Lu<sup>#</sup>, <span class="author">Jiahao Wang<sup>#</sup></span>, Nisile Kakongoma, Wen Hua, Jiahui Xu, Yunfei Wang, Shutao He, Hongcang Gu, Jiantao Shi, and Wensheng Hu, DNA methylation and expression profiles of placenta and umbilical cord blood reveal the characteristics of gestational diabetes mellitus patients and offspring. <b>Process Biochemistry</b> 2022
+							[<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9126248/" target="_blank">PubMed</a>]
+							[<a href="Publications/ClinicalEpigenetics_2022.pdf" target="_blank">PDF</a>]
+					</p></li>
 				</ul>
 			</div>
 
